@@ -1,3 +1,7 @@
+2013-04-08  Jochen Rieger  <j.rieger@connecta.ag>
+
+	* Fixed bug #45706: GarbageCollector wrongly removes record with future starttime from indexqueue
+
 2013-04-05  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed bug #46180: Overrule language labels from TS
